Remove font11 no longer necessary. Change z-index on colors submenu for relationship chart.

--- a/themes/clouds/style.css
+++ b/themes/clouds/style.css
@@ -1397,10 +1397,6 @@ direction:rtl;
 .width90 {width:90%;}
 .width100 {width:100%;}
 
-.font11 {
-font-size:11px;
-}
-
 .font9 {
 font-size:9px;
 }
