--- a/themes/colors/css/colors.css
+++ b/themes/colors/css/colors.css
@@ -84,7 +84,7 @@ html[dir=rtl] .makeMenu li ul li {text-align:right;}
 
 /* Menu setup  */
 #main-menu {display: inline-block;width:100%;margin:0;padding:0;height:48px;}
-#main-menu ul {padding:0;margin:0;border:1px solid #dddddd;border-radius:5px;list-style-type:none;position:absolute;visibility:hidden;opacity:0;background:#ffffff;z-index:110;}
+#main-menu ul {padding:0;margin:0;border:1px solid #dddddd;border-radius:5px;list-style-type:none;position:absolute;visibility:hidden;opacity:0;background:#ffffff;z-index:201;}
 #main-menu li {display:block; position:relative;float:left;list-style:none;}
 #main-menu li a {display:block;}
 #main-menu li > ul {display:block;position:absolute;top:0;left:100%;right:auto;}
@@ -485,7 +485,6 @@ html[dir=rtl] .optionbox input {margin-left:5px;}
 .width100 {width:100%;}
 
 .font9 {font-size:9px;}
-.font11 {font-size:11px;}
 .font12 {font-size:12px;}
 
 /* Pending edits - TODO perhaps show differently in different contexts? */
