--- a/themes/fab/style.css
+++ b/themes/fab/style.css
@@ -830,10 +830,6 @@ left:auto;
 }
 
 /* Font sizes */
-.font11 {
-	font-size:11px;
-}
-
 .font9 {
 	font-size:9px;
 }
