--- a/themes/minimal/style.css
+++ b/themes/minimal/style.css
@@ -885,10 +885,6 @@ margin:20px;
 }
 
 /* font sizes */
-.font11 {
-	font-size:11px;
-}
-
 .font9 {
 	font-size:9px;
 }
