--- a/themes/webtrees/style.css
+++ b/themes/webtrees/style.css
@@ -266,7 +266,6 @@ html[dir=rtl] .header_search {float:left;}
 .width100 {width:100%;}
 
 /* Font sizes */
-.font11 {font-size:11px;}
 .font9 {font-size:9px;}
 
 /* Message box */
