--- a/themes/xenea/style.css
+++ b/themes/xenea/style.css
@@ -1202,10 +1202,6 @@ h4 {
 }
 
 /* Font sizes */
-.font11 {
-	font-size:11px;
-}
-
 .font9 {
 	font-size:9px;
 }
